<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AURUtrivia</string>
    <string name="titulo_cancha">Cancha</string>
    <string name="titulo_acercade">Acerca de...</string>
    <string name="action_settings">Settings</string>
    <string name="boton4">Otros Juegos</string>
    <string name="titulo_puntuaciones">Puntuaciones</string>
    <string name="salir">Salir</string>
    <string name="titulo_ajustes">Titulo Ajustes</string>
    <string name="boton1">Jugar</string>
    <string name="boton2">Ajustes</string>
    <string name="boton3">Puntuaciones</string>
    <string name="musica">Musica</string>
    <string name="titulo_entrada">Entrada</string>
    <string name="titulo_resumen">Resumen</string>
    <string name="company">diguibal@gmail.com</string>
    <string name="hello_world">H</string>
    <string name="logo">Logo</string>
    <string name="txt_titulo_otras_apps">Creemos que también te podrían gustar las siguientes apps:</string>
    <string name="otras_apps_mate">Aca va a ir una pequena descripcion de la nueva app.</string>
    <string name="titulo_otras_apps">Otras aplicaciones</string>
    
    
</resources>
