<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <!-- Heather aligned to bottom -->

    <include layout="@layout/header" />

    <!-- Footer aligned to bottom -->

    <include layout="@layout/footer" />

    <Button
            android:id="@+id/btnsalir"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@+id/content1"
            android:layout_below="@+id/header" 
            android:layout_alignParentRight="true"
            android:background="@drawable/star_button"
             android:text="X"
            android:textColor="@color/white" />
    
    
    <!-- Conteiner Principal -->

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/btnsalir"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="@drawable/panel"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/txtPregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/btnaPuntaje"
            style="@style/custombutton"
            android:text="@string/boton1" />

        <Button
            android:id="@+id/button4"
            style="@style/custombutton"
            android:layout_marginTop="29dp"
            android:text="@string/boton4" />

        <Button
            android:id="@+id/button3"
            style="@style/custombutton"
            android:text="@string/boton3" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/custombutton"
            android:layout_marginTop="26dp"
            android:text="@string/boton2" />

    
    </LinearLayout>
    
</RelativeLayout>